@@ -20,10 +20,10 @@
   </lang>
   <autodetect>
     <general>
-      <commandset>MLC,PCL,PML,DW-PCL,DYN,DESKJET</commandset>
-      <description>hp photosmart 7400</description>
-      <manufacturer>hp</manufacturer>
-      <model>photosmart 7400</model>
+      <commandset>MLC,PCL,PML,DW-PCL,DESKJET,DYN</commandset>
+      <description>7450</description>
+      <manufacturer>HP</manufacturer>
+      <model>Photosmart 7400 series</model>
     </general>
   </autodetect>
   <functionality>A</functionality>
